<resources>
    <string name="app_name">Symboorm</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="id">id</string>
    <string name="signup">signup</string>
    <string name="password">password</string>
    <string name="ssu_symbol">symbol</string>
    <string name="ssu_email">\@soongsil.ac.kr</string>
    <string name="payment">결제수단</string>
    <string name="transaction">거래내역</string>
    <string name="userinfo_modification">회원정보변경</string>
    <string name="help">도움말</string>
    <string name="logout">로그아웃</string>
    <string name="chat">채팅</string>
    <item name="photoView" type="id"/>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="board">게시판</string>
    <string name="price">가격 입력</string>
    <string name="time">시간 입력</string>
    <string name="register">게시글 등록</string>
    <string name="content">내용을 입력하세요</string>
    <string name="title">제목 입력</string>
    <string name="call">연락하기</string>
</resources>
