<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ssu_symbol"
        android:id="@+id/ssu_image"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/splash" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/id_fill"
            app:layout_constraintTop_toBottomOf="@id/ssu_image">

            <EditText
                android:id="@+id/user_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:hint="@string/id"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/ssu_email" />
        </LinearLayout>


        <EditText
            android:id="@+id/user_pw"
            app:layout_constraintTop_toBottomOf="@id/id_fill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:imeOptions="actionDone"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginBtn"
            app:layout_constraintTop_toBottomOf="@id/user_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/forgot_password"
            app:layout_constraintTop_toBottomOf="@id/loginBtn"
            android:autoLink="all"
            android:gravity="end"
            android:linksClickable="true"
            android:text="Forgot Password?"
            android:textAlignment="textEnd"
            android:textColor="@drawable/text_click"
            android:textColorLink="#FFFFFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/forgot_password">

            <View
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="Don't have an account? " />

            <TextView
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:autoLink="all"
                android:linksClickable="true"
                android:text="@string/signup"
                android:textColor="@drawable/text_click"
                android:textColorLink="#FFFFFF" />
        </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>